<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/img_table"
        android:layout_width="502dp"
        android:layout_height="256dp"
        android:contentDescription="@string/cd_table"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/black" />

    <ImageView
        android:id="@+id/img_record"
        android:layout_width="84dp"
        android:layout_height="92dp"
        android:contentDescription="@string/cd_record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@android:drawable/ic_popup_reminder" />

    <ImageView
        android:id="@+id/img_recruitment"
        android:layout_width="124dp"
        android:layout_height="105dp"
        android:contentDescription="@string/cd_recruitment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@android:drawable/presence_audio_away" />

    <ImageView
        android:id="@+id/img_training"
        android:layout_width="91dp"
        android:layout_height="99dp"
        android:contentDescription="@string/cd_training"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        app:srcCompat="@android:drawable/presence_video_busy" />

    <ImageView
        android:id="@+id/img_team"
        android:layout_width="90dp"
        android:layout_height="98dp"
        android:contentDescription="@string/cd_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@android:drawable/sym_action_call" />

    <ImageView
        android:id="@+id/img_missioncontrol"
        android:layout_width="125dp"
        android:layout_height="121dp"
        android:contentDescription="@string/cd_mission_control"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575"
        app:srcCompat="@android:drawable/star_big_on" />

    <ImageView
        android:id="@+id/img_medbay"
        android:layout_width="117dp"
        android:layout_height="152dp"
        android:contentDescription="@string/cd_medbay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:srcCompat="@android:drawable/alert_dark_frame" />
</androidx.constraintlayout.widget.ConstraintLayout>
